--- a/form_reg_fop.html
+++ b/form_reg_fop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <!-- Meta, title, CSS, favicons, etc. -->
@@ -27,7 +27,11 @@
   <link href="vendors/starrr/dist/starrr.css" rel="stylesheet">
   <!-- bootstrap-daterangepicker -->
   <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/bank-ctrl.js"></script>
     <!-- Custom Theme Style -->
     <link href="build/css/custom.min.css" rel="stylesheet">
   </head>
@@ -51,7 +55,7 @@
           </div>
           <div class="profile_info">
             <span>Привіт,</span>
-            <h2>Василь Пупкін</h2>
+            <h2>{{currentUser.name}}</h2>
           </div>
         </div>
         <!-- /menu profile quick info -->
@@ -66,13 +70,14 @@
                 <ul class="nav child_menu">
                   <li><a href="index.html">Інфо</a></li>
                   <li><a href="calendar.html">Календар</a></li>
-                  <li><a href="login.html">Зайти в систему</a></li>
-                  <li><a href="login.html#signup">Реєстрація в системі</a></li>
+                  <!--<li><a href="login.html">Зайти в систему</a></li>-->
+                  <!--<li><a href="login.html#signup">Реєстрація в системі</a></li>-->
                 </ul>
               </li>
               <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href="form_reg_fop.html">Реєстрація ФОП</a></li>
+                  <li><a href="form_count_tax.html">Обрахунок податку</a></li>
                   <!--<li><a href="form.html">General Form</a></li>-->
                   <!--<li><a href="form_advanced.html">Advanced Components</a></li>-->
                   <!--<li><a href="form_validation.html">Form Validation</a></li>-->
@@ -120,7 +125,7 @@
 
             <li class="">
               <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                <img src="images/img.jpg" alt="">Василь Пупкін
+                <img src="images/img.jpg" alt="">{{currentUser.name}}
                 <span class=" fa fa-angle-down"></span>
               </a>
               <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -132,7 +137,7 @@
                   </a>
                 </li>
                 <li><a href="javascript:;">Допомога</a></li>
-                <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
+                <li><a ng-click="logout()" href="login.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
               </ul>
             </li>
 
