--- a/form_count_tax.html
+++ b/form_count_tax.html
@@ -29,6 +29,7 @@
   <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
   <script src="js/app.js"></script>
   <script src="js/bank-ctrl.js"></script>
     <!-- Custom Theme Style -->
@@ -41,7 +42,7 @@
     <div class="col-md-3 left_col">
       <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-          <a href="index.html" class="site_title"><span>Система державної податкової служби!</span></a>
+          <a href="index_main.html" class="site_title"><span>Система державної податкової служби!</span></a>
         </div>
 
         <div class="clearfix"></div>
@@ -66,7 +67,7 @@
             <ul class="nav side-menu">
               <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href="index.html">Інфо</a></li>
+                  <li><a href="index_main.html">Інфо</a></li>
                   <li><a href="calendar.html">Календар</a></li>
                   <!--<li><a href="login.html">Зайти в систему</a></li>-->
                   <!--<li><a href="login.html#signup">Реєстрація в системі</a></li>-->
@@ -134,7 +135,7 @@
                   </a>
                 </li>
                 <li><a href="javascript:;">Допомога</a></li>
-                <li><a ng-click="logout()" href="login.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
+                <li><a ng-click="logout()" href="index.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
               </ul>
             </li>
 
