--- a/form_reg_fop.html
+++ b/form_reg_fop.html
@@ -43,7 +43,7 @@
     <div class="col-md-3 left_col">
       <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-          <a href="index.html" class="site_title"><span>Система державної податкової служби!</span></a>
+          <a href="index_main.html" class="site_title"><span>Система державної податкової служби!</span></a>
         </div>
 
         <div class="clearfix"></div>
@@ -68,9 +68,9 @@
             <ul class="nav side-menu">
               <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href="index.html">Інфо</a></li>
+                  <li><a href="index_main.html">Інфо</a></li>
                   <li><a href="calendar.html">Календар</a></li>
-                  <!--<li><a href="login.html">Зайти в систему</a></li>-->
+                  <!--<li><a href="index_main.html">Зайти в систему</a></li>-->
                   <!--<li><a href="login.html#signup">Реєстрація в системі</a></li>-->
                 </ul>
               </li>
@@ -137,7 +137,7 @@
                   </a>
                 </li>
                 <li><a href="javascript:;">Допомога</a></li>
-                <li><a ng-click="logout()" href="login.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
+                <li><a ng-click="logout()" href="index.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
               </ul>
             </li>
 
