add logo, main page, feedback form, user ico

--- a/calendar.html
+++ b/calendar.html
@@ -33,7 +33,10 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index_main.html" class="site_title"><span>Система державної податкової служби!</span></a>
+
+              <a href="index_main.html" class="site_title">
+                <img src="images/logo.jpg" alt="..." class="img-circle profile_img" style=" width: 22%; margin: 0;">
+                <span>Система державної податкової служби!</span></a>
             </div>
 
             <div class="clearfix"></div>
@@ -41,7 +44,7 @@
         <!-- menu profile quick info -->
         <div class="profile clearfix">
           <div class="profile_pic">
-            <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+            <img src="images/user.png" alt="..." class="img-circle profile_img">
           </div>
           <div class="profile_info">
             <span>Привіт,</span>
@@ -76,7 +79,14 @@
                   <!--<li><a href="form_buttons.html">Form Buttons</a></li>-->
                 </ul>
               </li>
-
+              <li><a><i class="fa fa-edit"></i> Зворотній звязок <span class="fa fa-chevron-down"></span></a>
+                <ul class="nav child_menu">
+                  <li><a href="https://vk.com/id71300985">Vk</a></li>
+                  <li><a href="https://www.facebook.com/striker.life">Facebook</a></li>
+                  <li><a >cherniak.sergii@gmailcom</a></li>
+                  <li><a >0973324567</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
 
@@ -115,7 +125,7 @@
 
             <li class="">
               <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                <img src="images/img.jpg" alt="">{{currentUser.name}}
+                <img src="images/user.png" alt="">{{currentUser.name}}
                 <span class=" fa fa-angle-down"></span>
               </a>
               <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -139,7 +149,7 @@
               <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -151,7 +161,7 @@
                 </li>
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -163,7 +173,7 @@
                 </li>
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -175,7 +185,7 @@
                 </li>
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
