--- a/index_main.html
+++ b/index_main.html
@@ -40,7 +40,9 @@
     <div class="col-md-3 left_col">
       <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-          <a href="index_main.html" class="site_title"><span>Система державної податкової служби!</span></a>
+          <a href="index_main.html" class="site_title">
+            <img src="images/logo.jpg" alt="..." class="img-circle profile_img" style=" width: 22%; margin: 0;">
+            <span>Система державної податкової служби!</span></a>
         </div>
 
         <div class="clearfix"></div>
@@ -48,7 +50,7 @@
         <!-- menu profile quick info -->
         <div class="profile clearfix">
           <div class="profile_pic">
-            <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+            <img src="images/user.png" alt="..." class="img-circle profile_img">
           </div>
           <div class="profile_info">
             <span>Привіт,</span>
@@ -81,7 +83,14 @@
                   <!--<li><a href="form_buttons.html">Form Buttons</a></li>-->
                 </ul>
               </li>
-
+              <li><a><i class="fa fa-edit"></i> Зворотній звязок <span class="fa fa-chevron-down"></span></a>
+                <ul class="nav child_menu">
+                  <li><a href="https://vk.com/id71300985">Vk</a></li>
+                  <li><a href="https://www.facebook.com/striker.life">Facebook</a></li>
+                  <li><a >cherniak.sergii@gmailcom</a></li>
+                  <li><a >0973324567</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
 
@@ -120,7 +129,7 @@
 
             <li class="">
               <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                <img src="images/img.jpg" alt="">{{currentUser.name}}
+                <img src="images/user.png" alt="">{{currentUser.name}}
                 <span class=" fa fa-angle-down"></span>
               </a>
               <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -144,7 +153,7 @@
               <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -156,7 +165,7 @@
                 </li>
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -168,7 +177,7 @@
                 </li>
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -180,7 +189,7 @@
                 </li>
                 <li>
                   <a>
-                    <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                    <span class="image"><img src="images/user.png" alt="Profile Image" /></span>
                     <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -210,14 +219,18 @@
     <!-- page content -->
     <div class="right_col" role="main">
       <div class="view-mail">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-        <p>Riusmod tempor incididunt ut labor erem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-          nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-          mollit anim id est laborum.</p>
-        <p>Modesed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+        <p>Державна податкова служба</p>
+<p></p>
+        <p>Податкова служба – це сукупність державних органів, які організують і контролюють надходження податків, податкових і окремих видів неподаткових платежів.
+        </p>
+        <p>Податки існують у людському суспільстві майже 1000 років. Запровадження податків мало надзвичайно прогресивне значення для розвитку суспільства. Водночас непосильні податки були причиною багатьох соціальних конфліктів і кровопролитних воєн. Вважалося, що податки суперечать недоторканості приватної власності, і їх введення допускалося лише в надзвичайних ситуаціях.
+        </p>
+        <p>Податкова служба забезпечує надходження до бюджету всіх відрахувань, які згідно закону, включені до податкової системи.
+        </p>
+        <p>Платник податків - суб’єкти господарської діяльності, бюджетні, громадські та інші підприємства, установи та організації, які здійснюють діяльність, спрямовану на отримання прибутку, що використовують ІАС для цілей оподаткування.
+        </p>
+        <p>Дана система призначена для допомоги особам зареєструватися як платник податків та для автоматичного розрахунку податків на основі доходів та додаткових витрат підприємця, що повинні сплачуватись у податкову службу.
+        </p> </div>
 
 
     </div>
@@ -225,9 +238,6 @@
 
     <!-- footer content -->
     <footer>
-      <div class="pull-right">
-        Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
-      </div>
       <div class="clearfix"></div>
     </footer>
     <!-- /footer content -->
