--- a/calendar.html
+++ b/calendar.html
@@ -56,42 +56,40 @@
         <br />
 
         <!-- sidebar menu -->
-        <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-          <div class="menu_section">
-            <ul class="nav side-menu">
-              <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="index_main.html">Інфо</a></li>
-                  <li><a href="calendar.html">Календар</a></li>
-                  <!--<li><a href="login.html">Зайти в систему</a></li>-->
-                  <!--<li><a href="login.html#signup">Реєстрація в системі</a></li>-->
+            <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+              <div class="menu_section">
+                <ul class="nav side-menu">
+                  <li><a><i class="fa fa-home"></i> Головна <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="index_main.html">Інформація</a></li>
+                      <li><a href="calendar.html">Календар</a></li>
+                    </ul>
+                  </li>
+                  <li><a><i class="fa fa-edit"></i> Форми для платників податків <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="form_reg_fop.html">Реєстрація ФОП</a></li>
+                      <li><a href="form_count_tax.html">Обрахунок податку</a></li>
+                      <!--<li><a href="form.html">General Form</a></li>-->
+                      <!--<li><a href="form_advanced.html">Advanced Components</a></li>-->
+                      <!--<li><a href="form_validation.html">Form Validation</a></li>-->
+                      <!--<li><a href="form_wizards.html">Form Wizard</a></li>-->
+                      <!--<li><a href="form_upload.html">Form Upload</a></li>-->
+                      <!--<li><a href="form_buttons.html">Form Buttons</a></li>-->
+                    </ul>
+                  </li>
+                  <li><a><i class="fa fa-edit"></i> Зворотній звязок <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                      <li><a href="https://vk.com/id71300985">Vk</a></li>
+                      <li><a href="https://www.facebook.com/striker.life">Facebook</a></li>
+                      <li><a >cherniak.sergii@gmailcom</a></li>
+                      <li><a >0973324567</a></li>
+                    </ul>
+                  </li>
                 </ul>
-              </li>
-              <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="form_reg_fop.html">Реєстрація ФОП</a></li>
-                  <li><a href="form_count_tax.html">Обрахунок податку</a></li>
-                  <!--<li><a href="form.html">General Form</a></li>-->
-                  <!--<li><a href="form_advanced.html">Advanced Components</a></li>-->
-                  <!--<li><a href="form_validation.html">Form Validation</a></li>-->
-                  <!--<li><a href="form_wizards.html">Form Wizard</a></li>-->
-                  <!--<li><a href="form_upload.html">Form Upload</a></li>-->
-                  <!--<li><a href="form_buttons.html">Form Buttons</a></li>-->
-                </ul>
-              </li>
-              <li><a><i class="fa fa-edit"></i> Зворотній звязок <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                  <li><a href="https://vk.com/id71300985">Vk</a></li>
-                  <li><a href="https://www.facebook.com/striker.life">Facebook</a></li>
-                  <li><a >cherniak.sergii@gmailcom</a></li>
-                  <li><a >0973324567</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+              </div>
 
 
-        </div>
+            </div>
         <!-- /sidebar menu -->
 
         <!-- /menu footer buttons -->
