--- a/form_count_tax.html
+++ b/form_count_tax.html
@@ -68,18 +68,17 @@
         <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
           <div class="menu_section">
             <ul class="nav side-menu">
-              <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+              <li><a><i class="fa fa-home"></i> Головна <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href="index_main.html">Інфо</a></li>
+                  <li><a href="index_main.html">Інформація</a></li>
                   <li><a href="calendar.html">Календар</a></li>
-                  <!--<li><a href="login.html">Зайти в систему</a></li>-->
-                  <!--<li><a href="login.html#signup">Реєстрація в системі</a></li>-->
                 </ul>
               </li>
-              <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+              <li><a><i class="fa fa-edit"></i> Форми для платників податків <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href="form_reg_fop.html">Реєстрація ФОП</a></li>
                   <li><a href="form_count_tax.html">Обрахунок податку</a></li>
+                  <!--<li><a href="form.html">General Form</a></li>-->
                   <!--<li><a href="form_advanced.html">Advanced Components</a></li>-->
                   <!--<li><a href="form_validation.html">Form Validation</a></li>-->
                   <!--<li><a href="form_wizards.html">Form Wizard</a></li>-->
