--- a/change_account.html
+++ b/change_account.html
@@ -136,14 +136,14 @@
                 <span class=" fa fa-angle-down"></span>
               </a>
               <ul class="dropdown-menu dropdown-usermenu pull-right">
-                <li><a href="change_account.html"> Профіль</a></li>
-                <!--<li>-->
-                <!--<a href="javascript:;">-->
-                <!--<span class="badge bg-red pull-right">50%</span>-->
-                <!--<span>Налаштування</span>-->
-                <!--</a>-->
-                <!--</li>-->
-                <!--<li><a href="javascript:;">Допомога</a></li>-->
+                <li><a href="javascript:;"> Профіль</a></li>
+                <li>
+                  <a href="javascript:;">
+                    <span class="badge bg-red pull-right">50%</span>
+                    <span>Налаштування</span>
+                  </a>
+                </li>
+                <li><a href="javascript:;">Допомога</a></li>
                 <li><a ng-click="logout()" href="index.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
               </ul>
             </li>
@@ -223,7 +223,7 @@
           <div class="">
             <div class="page-title" style="    height: 130px;">
               <div>
-                <h3>Обрахунок податку</h3>
+                <h3>Профіль</h3>
               </div>
             </div>
 
@@ -254,52 +254,31 @@
                     <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left">
                       <h2></h2>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Придбано оборотні активи (товари, виробничі запаси, роботи, послуги) <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">Прізвище ім'я
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="number" id="first-name" ng-model="dohid.aktuvu" required="required" class="form-control col-md-7 col-xs-12">
+                          <input type="text" id="first-name" ng-model="currentUser.name" required="required" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Нараховано оплату праці працівникам <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">Телефон
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="number" id="last-name" ng-model="dohid.workers" name="last-name" required="required" class="form-control col-md-7 col-xs-12">
+                          <input type="text" id="last-name" ng-model="currentUser.phone" name="last-name" class="form-control col-md-7 col-xs-12">
                         </div>
                       </div>
                       <div class="form-group">
-                        <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Нараховано обов’язкові платежі</label>
+                        <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Адреса</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="middle-name" ng-model="dohid.platezi" class="form-control col-md-7 col-xs-12" type="number" name="middle-name">
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Загальні доходи</label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="middle-name" ng-model="dohid.all" class="form-control col-md-7 col-xs-12" type="number" name="middle-name">
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Приріст оборотних активів</label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="middle-name" ng-model="dohid.prurist" class="form-control col-md-7 col-xs-12" type="number" name="middle-name">
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Платежі, які зменшують податкове зобов’язання</label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="middle-name" ng-model="dohid.pilgi" class="form-control col-md-7 col-xs-12" type="number" name="middle-name">
+                          <input id="middle-name" ng-model="currentUser.address" class="form-control col-md-7 col-xs-12" type="text" name="middle-name">
                         </div>
                       </div>
 
                       <div class="ln_solid"></div>
-                      <h2 ng-if="valVitratu">Валові витрати: {{valVitratu}}</h2>
-                      <h2 ng-if="valDohid">Валовий дохід: {{valDohid}}</h2>
-                      <h2 ng-if="podatok">Податок на прибуток, що підлягає сплаті до бюджету: {{podatok}}</h2>
+                      <h2 ng-if="isInfoSaved">Акаунт збережено</h2>
+
                       <div class="ln_solid"></div>
-                      <div ng-click="countVal(dohid)" class="btn btn-success">обрахунок</div>
+                      <div ng-click="saveUser(currentUser)" class="btn btn-success">Зберегти</div>
                      <!--<div class="form-group">-->
                         <!--<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">-->
                           <!--<button class="btn btn-primary" type="button">Cancel</button>-->
