--- a/form_reg_fop.html
+++ b/form_reg_fop.html
@@ -137,14 +137,14 @@
                 <span class=" fa fa-angle-down"></span>
               </a>
               <ul class="dropdown-menu dropdown-usermenu pull-right">
-                <li><a href="javascript:;"> Профіль</a></li>
-                <li>
-                  <a href="javascript:;">
-                    <span class="badge bg-red pull-right">50%</span>
-                    <span>Налаштування</span>
-                  </a>
-                </li>
-                <li><a href="javascript:;">Допомога</a></li>
+                <li><a href="change_account.html"> Профіль</a></li>
+                <!--<li>-->
+                <!--<a href="javascript:;">-->
+                <!--<span class="badge bg-red pull-right">50%</span>-->
+                <!--<span>Налаштування</span>-->
+                <!--</a>-->
+                <!--</li>-->
+                <!--<li><a href="javascript:;">Допомога</a></li>-->
                 <li><a ng-click="logout()" href="index.html"><i class="fa fa-sign-out pull-right"></i> Вийти з системи</a></li>
               </ul>
             </li>
