--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js"></script>
+    <script src="js/jspdf.debug.js"></script>
+    <script src="js/saveHtmlToPdf.js"></script>
+
     <script src="js/app.js"></script>
     <script src="js/bank-ctrl.js"></script>
   </head>
@@ -43,6 +49,10 @@
               </div>
               <div>
                 <input type="password" class="form-control" ng-model="user.password" placeholder="Пароль" required="" />
+              </div>
+              <div>
+                <label for="file">Ключ файл:</label>
+                <input type="file" id="file" class="form-control" ng-model="user.keyFile" placeholder="Ключ файл" required="" />
               </div>
               <div>
                 <a class="btn btn-default submit"  ng-click="login(user)">Війти в систему</a>
