--- a/index_main.html
+++ b/index_main.html
@@ -27,6 +27,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js"></script>
+  <script src="js/jspdf.debug.js"></script>
+  <script src="js/saveHtmlToPdf.js"></script>
   <script src="js/app.js"></script>
   <script src="js/bank-ctrl.js"></script>
   <!-- Custom Theme Style -->
